--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,16 @@
-<div class="w-full bg-[#2484C2] h-20 p-4">
+<div class="w-full bg-[#2484C2] h-20 p-4 flex justify-between">
   <img src="./../../assets/logo.svg" class="invert w-24" />
   <!-- SEARCH BAR  -->
   <div></div>
-  <div>
-    <img src="./../../assets/images/cart.svg" />
+  <div class="flex space-x-4">
+    <img class="w-6" src="./../../assets/images/cart.svg" />
+    <img class="w-6" src="./../../assets/images/love.svg" />
+    <img class="w-6" src="./../../assets/images/user.svg" />
+    <div (click)="peace()">
+      <img
+        class="w-6 invert md:hidden"
+        src="./../../assets/images/search.svg"
+      />
+    </div>
   </div>
 </div>
