work in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
-<html>
-  <head>
-    <title>Mean Commerce</title>
-  </head>
-  <body>
-    <app-header></app-header>
-    <app-home></app-home>
-  </body>
-</html>
+<app-header></app-header>
+<app-home></app-home>
+
+<router-outlet></router-outlet>
