modal is working now

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,5 +27,7 @@
     </div>
   </div>
 </div>
-<app-search-modal></app-search-modal>
+<div *ngIf="modalState">
+  <app-search-modal></app-search-modal>
+</div>
 <app-bottom-nav></app-bottom-nav>
