working on the bottom nav

--- a/src/app/header/bottom-nav/bottom-nav.component.html
+++ b/src/app/header/bottom-nav/bottom-nav.component.html
@@ -1,1 +1,28 @@
-
+<div class="p-4 flex space-x-6">
+  <div
+    class="flex bg-gray-100 hover:bg-ciliconorange group-[allcategory]: p-2 space-x-2"
+  >
+    <button class="">All Category</button>
+    <img
+      class=""
+      src="./../../../assets/icons/downarrow.svg"
+      alt="arrow down image"
+    />
+  </div>
+  <div class="flex text-gray-600 space-x-2 items-center">
+    <img src="./../../../assets/icons/map.svg" alt="map icon" />
+    <p>Track Order</p>
+  </div>
+  <div class="flex text-gray-600 space-x-2 items-center">
+    <img src="./../../../assets/icons/compareicon.svg" alt="map icon" />
+    <p>Compare</p>
+  </div>
+  <div class="flex text-gray-600 space-x-2 items-center">
+    <img src="./../../../assets/icons/headphone.svg" alt="map icon" />
+    <p>Customer Support</p>
+  </div>
+  <div class="flex text-gray-600 space-x-2 items-center">
+    <img src="./../../../assets/icons/info.svg" alt="map icon" />
+    <p>Need Help</p>
+  </div>
+</div>
