--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="bg-[#191C1F] p-4">
   <div class="lg:w-[1200px] flex justify-between m-auto">
-    <img class="w-24" src="./../../assets/images/blackfriday.svg" />
-    <img class="w-24" src="./../../assets/images/59off.svg" />
-    <img class="w-24" src="./../../assets/images/shop now.svg" />
+    <img class="w-24" src="./../../assets/icons/blackfriday.svg" />
+    <img class="w-24" src="./../../assets/icons/59off.svg" />
+    <img class="w-24" src="./../../assets/icons/shop now.svg" />
   </div>
 </div>
 <div class="bg-[#2484C2] p-6">
@@ -11,17 +11,17 @@
     <!-- SEARCH BAR  -->
     <div class="h-8 p-2 bg-white hidden md:flex">
       <input class="outline-none w-[320px] text-black" />
-      <img class="w-6 hidden md:flex" src="./../../assets/images/search.svg" />
+      <img class="w-6 hidden md:flex" src="./../../assets/icons/search.svg" />
     </div>
     <div class="flex space-x-4">
-      <img class="w-6" src="./../../assets/images/cart.svg" />
-      <img class="w-6" src="./../../assets/images/love.svg" />
-      <img class="w-6" src="./../../assets/images/user.svg" />
+      <img class="w-6" src="./../../assets/icons/cart.svg" />
+      <img class="w-6" src="./../../assets/icons/love.svg" />
+      <img class="w-6" src="./../../assets/icons/user.svg" />
       <button type="button">
         <img
           class="w-6 invert md:hidden"
           (click)="changeState()"
-          src="./../../assets/images/search.svg"
+          src="./../../assets/icons/search.svg"
         />
       </button>
     </div>
@@ -30,4 +30,4 @@
 <div *ngIf="modalState">
   <app-search-modal></app-search-modal>
 </div>
-<app-bottom-nav></app-bottom-nav>
+<app-bottom-nav class="hidden md:flex"></app-bottom-nav>
