bottom nav complete

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,4 +30,8 @@
 <div *ngIf="modalState">
   <app-search-modal></app-search-modal>
 </div>
-<app-bottom-nav class="hidden md:flex"></app-bottom-nav>
+<div class="border-b">
+  <app-bottom-nav
+    class="hidden md:flex lg:w-[1200px] m-auto justify-start"
+  ></app-bottom-nav>
+</div>
