--- a/src/app/header/bottom-nav/bottom-nav.component.html
+++ b/src/app/header/bottom-nav/bottom-nav.component.html
@@ -1,10 +1,10 @@
-<div class="p-4 flex space-x-6">
+<div class="p-4 flex space-x-6 text-sm">
   <div
-    class="flex bg-gray-100 hover:bg-ciliconorange group-[allcategory]: p-2 space-x-2"
+    class="flex bg-gray-100 hover:bg-ciliconorange group/allcategory p-2 space-x-2"
   >
-    <button class="">All Category</button>
+    <button class="group-hover/allcategory:text-white">All Category</button>
     <img
-      class=""
+      class="group-hover/allcategory:invert"
       src="./../../../assets/icons/downarrow.svg"
       alt="arrow down image"
     />
