--- a/src/app/home/widgets/widgets.component.html
+++ b/src/app/home/widgets/widgets.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-[90%] md:w-[800px] lg:w-[1200px] m-0 mt-4 space-y-4 md:space-y-0 md:flex md:space-x-4"
+  class="w-[90%] md:w-[800px] lg:w-[1200px] m-auto mt-4 space-y-4 md:space-y-0 md:flex md:space-x-4"
 >
   <div
     class="bg-gray-100 h-[400px] space-y-4 md:space-y-0 flex flex-col lg:flex-row items-center justify-center p-8"
@@ -25,7 +25,7 @@
     <!-- xbox -->
   </div>
 
-  <div class="space-y-2">
+  <div class="space-y-2 lg:space-y-1">
     <!-- PIXEL -->
     <div class="bg-gray-900 flex rounded-lg md:h-[198px]">
       <!-- pixel -->
