--- a/src/app/home/features/features.component.html
+++ b/src/app/home/features/features.component.html
@@ -1,18 +1,44 @@
-<div class="mt-4 p-2">
+<div class="mt-4 md:w-[800px] m-auto lg:w-[1200px]">
   <!--  -->
-  <div class="flex space-x-4">
-    <div class="flex items-center space-x-2 p-2">
-      <img src="../../../assets/icons/package.svg" class="w-10" />
-      <div>
-        <p class="uppercase text-sm font-medium">Fast Delivery</p>
-        <p class="text-gray-600 text-xs">Delivery in 24/H</p>
+  <div class="md:flex">
+    <div class="flex md:w-1/2">
+      <div
+        class="w-1/2 border-[0.5px] flex items-center justify-center space-x-2 p-2 md:px-4"
+      >
+        <img src="../../../assets/icons/package.svg" class="w-6" />
+        <div>
+          <p class="uppercase text-[12px] font-medium">Fast Delivery</p>
+          <p class="text-gray-600 text-[10px]">Delivery in 24/H</p>
+        </div>
+      </div>
+      <div
+        class="w-1/2 border-[0.5px] flex items-center justify-center space-x-2 p-2 md:px-4"
+      >
+        <img src="../../../assets/icons/champion.svg" class="w-6" />
+        <div>
+          <p class="uppercase text-[12px] font-medium">24 Hours Return</p>
+          <p class="text-gray-600 text-[10px]">100% money-back guarantee</p>
+        </div>
       </div>
     </div>
-    <div class="flex items-center space-x-2 p-2">
-      <img src="../../../assets/icons/champion.svg" class="w-10" />
-      <div>
-        <p class="uppercase text-sm font-medium">24 Hours Return</p>
-        <p class="text-gray-600 text-xs">100% money-back guarantee</p>
+    <div class="flex md:w-1/2">
+      <div
+        class="w-1/2 border-[0.5px] flex items-center justify-center space-x-2 p-2 md:px-4"
+      >
+        <img src="../../../assets/icons/wallet.svg" class="w-6" />
+        <div>
+          <p class="uppercase text-[12px] font-medium">Secure Payment</p>
+          <p class="text-gray-600 text-[10px]">Your money is safe</p>
+        </div>
+      </div>
+      <div
+        class="w-1/2 border-[0.5px] flex items-center justify-center space-x-2 p-2 md:px-4"
+      >
+        <img src="../../../assets/icons/headphone.svg" class="w-6 fill-black" />
+        <div>
+          <p class="uppercase text-[12px] font-medium">Support 24/7</p>
+          <p class="text-gray-600 text-[10px]">Live contact/message</p>
+        </div>
       </div>
     </div>
   </div>
