bottom nav fixed

--- a/src/app/header/bottom-nav/bottom-nav.component.html
+++ b/src/app/header/bottom-nav/bottom-nav.component.html
@@ -2,7 +2,9 @@
   <div
     class="flex bg-gray-100 hover:bg-ciliconorange group/allcategory p-2 space-x-2"
   >
-    <button class="group-hover/allcategory:text-white">All Category</button>
+    <button class="group-hover/allcategory:text-white w-[100px]">
+      All Category
+    </button>
     <img
       class="group-hover/allcategory:invert"
       src="./../../../assets/icons/downarrow.svg"
