--- a/src/app/home/features/features.component.html
+++ b/src/app/home/features/features.component.html
@@ -1,4 +1,4 @@
-<div class="mt-4 md:w-[800px] m-auto lg:w-[1200px]">
+<div class="mt-4 md:w-[800px] p-4 md:p-0 m-auto lg:w-[1200px]">
   <!--  -->
   <div class="md:flex">
     <div class="flex md:w-1/2">
