--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="lg:w-[1200px] m-auto">
+<div class="md:w-[800px] lg:w-[1200px] m-auto">
   <app-widgets></app-widgets>
   <app-features></app-features>
+  <app-bestdeals></app-bestdeals>
 </div>
