best_deals complete

--- a/src/app/home/bestdeals/bestdeals.component.html
+++ b/src/app/home/bestdeals/bestdeals.component.html
@@ -1,5 +1,5 @@
-<div class="p-2 md:p-0 mt-4">
-  <p class="font-semibold text-xl">Best Deals</p>
+<div class="p-2 md:p-0">
+  <p class="font-semibold text-xl md:text-2xl my-4">Best Deals</p>
   <div class="flex flex-wrap">
     <app-best-deal-product></app-best-deal-product>
     <app-best-deal-product></app-best-deal-product>
