--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="md:w-[800px] lg:w-[1200px] m-auto">
   <app-widgets></app-widgets>
-  <app-features></app-features>
-  <app-bestdeals></app-bestdeals>
+  <div class="space-y-[72px] flex flex-col">
+    <app-features></app-features>
+    <app-bestdeals></app-bestdeals>
+  </div>
 </div>
