--- a/src/app/home/bestdeals/bestdeals.component.html
+++ b/src/app/home/bestdeals/bestdeals.component.html
@@ -1,6 +1,8 @@
-<div class="p-2 md:p-0">
+<div class="p-4 md:p-0">
   <p class="font-semibold text-xl md:text-2xl my-4">Best Deals</p>
   <div class="flex flex-wrap">
+    <app-best-deal-product></app-best-deal-product>
+    <app-best-deal-product></app-best-deal-product>
     <app-best-deal-product></app-best-deal-product>
     <app-best-deal-product></app-best-deal-product>
     <app-best-deal-product></app-best-deal-product>
