--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,5 +5,6 @@
     <app-features></app-features>
     <app-bestdeals></app-bestdeals>
     <app-shop-category></app-shop-category>
+    <app-products></app-products>
   </div>
 </div>
