working on the apple pod banner

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,5 +6,6 @@
     <app-bestdeals></app-bestdeals>
     <app-shop-category></app-shop-category>
     <app-products></app-products>
+    <app-banner></app-banner>
   </div>
 </div>
