--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -1,5 +1,7 @@
-<div class="p-4 md:p-0">
-  <div class="bg-[#ffffff] p-4 space-y-4 flex flex-col items-center">
+<div class="p-4 md:p-0 md:flex md:space-x-4">
+  <div
+    class="bg-gray-100 md:flex-row p-4 md:p-6 md:space-x-4 space-y-4 md:space-y-0 flex flex-col items-center"
+  >
     <!-- APPLE HOMEPOD -->
     <div class="space-y-4">
       <p class="uppercase text-white bg-ciliconPriceBlue w-fit p-2 text-sm">
@@ -9,7 +11,9 @@
       <p class="text-gray-500">
         Jam-packed with innovation HomePod min delivers unexpectedly
       </p>
-      <button class="bg-ciliconorange flex text-white p-2">
+      <button
+        class="bg-ciliconorange flex text-white p-2 space-x-2 items-center"
+      >
         Shop now <span><img src="../../../assets/icons/rightarrow.svg" /></span>
       </button>
     </div>
@@ -18,7 +22,28 @@
     </div>
   </div>
 
-  <div class="bg-gray-900">
+  <div
+    class="bg-[#191C1F] md:flex-row md:space-x-3 flex flex-col items-center justify-between"
+  >
     <!-- xiomi banner -->
+    <div class="space-y-4 p-4 md:p-6">
+      <p class="uppercase text-white bg-[#EFD33D] w-fit p-2 text-sm">
+        Introducing
+      </p>
+      <p class="text-2xl lg:text-3xl font-semibold text-white">
+        Xiaomi Mi 11 Ultra 12GB+256FB
+      </p>
+      <p class="text-gray-200">
+        Jam-packed with innovation HomePod min delivers unexpectedly
+      </p>
+      <button
+        class="bg-ciliconorange flex text-white p-2 space-x-2 items-center"
+      >
+        Shop now <span><img src="../../../assets/icons/rightarrow.svg" /></span>
+      </button>
+    </div>
+    <div class="md:h-full md:flex md:items-end">
+      <img src="../../../assets/images/xiaomi.svg" />
+    </div>
   </div>
 </div>
