layout has been established no need to workok on the two banners on the side

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,5 +7,6 @@
     <app-shop-category></app-shop-category>
     <app-products></app-products>
     <app-banner></app-banner>
+    <app-computer-accessories></app-computer-accessories>
   </div>
 </div>
