--- a/src/app/home/computer-accessories/computer-accessories.component.html
+++ b/src/app/home/computer-accessories/computer-accessories.component.html
@@ -49,8 +49,40 @@
       <app-product-container></app-product-container>
     </div>
   </div>
-  <div class="hidden lg:flex">
-    <div class="bg-[#F7E99E]"></div>
-    <div></div>
+  <div class="hidden lg:flex lg:flex-col space-y-4">
+    <div class="bg-[#F7E99E] space-y-4 p-4 flex flex-col items-center">
+      <img src="../../../assets/images/buds.svg" />
+      <p class="text-center font-xl font-bold text-xl">
+        Xiaomi True Wireless Earbuds
+      </p>
+      <p class="text-center text-sm text-gray-600">
+        Escape the noise, It's time to hear the magic with Xiaomi Earbuds.
+      </p>
+      <div class="flex space-x-2 items-center">
+        <p>Only for:</p>
+        <p class="bg-white p-2 text-black font-semibold">$299 USD</p>
+      </div>
+      <div
+        class="bg-ciliconorange p-2 w-full flex space-x-2 items-center text-white justify-center"
+      >
+        <p>Shop now</p>
+        <img src="../../../assets/icons/rightarrow.svg" />
+      </div>
+    </div>
+    <div
+      class="bg-[#124261] text-center space-y-4 text-white p-4 flex flex-col items-center"
+    >
+      <p class="uppercase bg-[#ffffff] bg-opacity-10 p-2 text-sm">
+        Summer sales
+      </p>
+      <p class="uppercase text-2xl">37% Discount</p>
+      <p>only for <span class="text-[#EBC80C]">Smartphone </span>Product</p>
+      <div
+        class="bg-ciliconPriceBlue p-2 w-full flex space-x-2 items-center text-white justify-center"
+      >
+        <p>Shop now</p>
+        <img src="../../../assets/icons/rightarrow.svg" />
+      </div>
+    </div>
   </div>
 </div>
