--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -12,7 +12,7 @@
         Jam-packed with innovation HomePod min delivers unexpectedly
       </p>
       <button
-        class="bg-ciliconorange flex text-white p-2 space-x-2 items-center"
+        class="bg-ciliconorange flex text-white p-2  items-center"
       >
         Shop now <span><img src="../../../assets/icons/rightarrow.svg" /></span>
       </button>
