--- a/src/app/home/computer-accessories/computer-accessories.component.html
+++ b/src/app/home/computer-accessories/computer-accessories.component.html
@@ -1,10 +1,10 @@
 <div class="p-4 md:p-0 space-y-4 lg:space-y-0 lg:flex lg:space-x-2">
-  <div>
+  <div class="flex flex-col">
     <div class="flex items-center justify-between">
       <p class="text-xl font-semibold md:text-2xl lg:text-3xl">
         Computer Accessories
       </p>
-      <div class="hidden lg:flex space-x-4 w-fit">
+      <div class="hidden lg:flex space-x-4">
         <p
           class="text-gray-400 text-xs hover:text-ciliconorange cursor-pointer"
         >
@@ -49,7 +49,7 @@
       <app-product-container></app-product-container>
     </div>
   </div>
-  <div class="hidden lg:flex lg:flex-col space-y-4">
+  <div class="md:hidden lg:flex lg:flex-col space-y-2 lg:space-y-4">
     <div class="bg-[#F7E99E] space-y-4 p-4 flex flex-col items-center">
       <img src="../../../assets/images/buds.svg" />
       <p class="text-center font-xl font-bold text-xl">
