macbook banner completet

--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -11,9 +11,7 @@
       <p class="text-gray-500">
         Jam-packed with innovation HomePod min delivers unexpectedly
       </p>
-      <button
-        class="bg-ciliconorange flex text-white p-2  items-center"
-      >
+      <button class="bg-ciliconorange flex text-white p-2 items-center">
         Shop now <span><img src="../../../assets/icons/rightarrow.svg" /></span>
       </button>
     </div>
