--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,5 +8,6 @@
     <app-products></app-products>
     <app-banner></app-banner>
     <app-computer-accessories></app-computer-accessories>
+    <app-macbook-banner></app-macbook-banner>
   </div>
 </div>
