flash sales section complete

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,5 +9,6 @@
     <app-banner></app-banner>
     <app-computer-accessories></app-computer-accessories>
     <app-macbook-banner></app-macbook-banner>
+    <app-flash-sale></app-flash-sale>
   </div>
 </div>
