--- a/src/app/home/latest-news/latest-news.component.html
+++ b/src/app/home/latest-news/latest-news.component.html
@@ -1,1 +1,84 @@
-<p>latest-news works!</p>
+<div class="p-4 bg-gray-50 md:py-10 mt-6 md:mt-10 lg:mt-[72px] space-y-10">
+  <h2 class="text-center text-xl font-semibold md:text-2xl lg:text-3xl">
+    Latest News
+  </h2>
+  <div
+    class="space-y-3 md:space-y-0 md:flex justify-center space-x-4 lg:space-x-6"
+  >
+    <div class="md:w-[320px] bg-white p-4 rounded-lg space-y-2">
+      <img src="../../../assets/images/news-letter.png" class="rounded-lg" />
+      <div class="flex space-x-3 items-center">
+        <div class="flex space-x-1 items-center">
+          <img src="../../../assets/icons/user-icon.svg" />
+          <p class="text-xs text-gray-700">Gracie</p>
+        </div>
+        <div class="flex space-x-1 items-center">
+          <img src="../../../assets/icons/calender.svg" />
+          <p class="text-xs text-gray-700">Jan-24</p>
+        </div>
+        <div class="flex space-x-1 items-center">
+          <img src="../../../assets/icons/message.svg" />
+          <p class="text-xs text-gray-700">450</p>
+        </div>
+      </div>
+      <h4 class="font-semibold">
+        Cras nisl dolor, accumsan et metus sit amet, vulputate condimentum
+        dolor.
+      </h4>
+      <p>
+        Maecenas scelerisque, arcu quis tempus egestas, ligula diam molestie
+        lectus, tincidunt malesuada arcu metus posuere metus.
+      </p>
+    </div>
+    <div class="md:w-[320px] bg-white p-4 rounded-lg space-y-2">
+      <img src="../../../assets/images/news-letter.png" class="rounded-lg" />
+      <div class="flex space-x-3 items-center">
+        <div class="flex space-x-1 items-center">
+          <img src="../../../assets/icons/user-icon.svg" class="w-6" />
+          <p class="text-xs text-gray-700">Gracie</p>
+        </div>
+        <div class="flex space-x-1 items-center">
+          <img src="../../../assets/icons/calender.svg" class="w-6" />
+          <p class="text-xs text-gray-700">Jan-24</p>
+        </div>
+        <div class="flex space-x-1 items-center">
+          <img src="../../../assets/icons/message.svg" class="w-6" />
+          <p class="text-xs text-gray-700">450</p>
+        </div>
+      </div>
+      <h4 class="font-semibold">
+        Cras nisl dolor, accumsan et metus sit amet, vulputate condimentum
+        dolor.
+      </h4>
+      <p>
+        Maecenas scelerisque, arcu quis tempus egestas, ligula diam molestie
+        lectus, tincidunt malesuada arcu metus posuere metus.
+      </p>
+    </div>
+    <div class="md:w-[320px] bg-white p-4 rounded-lg space-y-2">
+      <img src="../../../assets/images/news-letter.png" class="rounded-lg" />
+      <div class="flex space-x-3 items-center">
+        <div class="flex space-x-1 items-center">
+          <img src="../../../assets/icons/user-icon.svg" />
+          <p class="text-xs text-gray-700">Gracie</p>
+        </div>
+        <div class="flex space-x-1 items-center">
+          <img src="../../../assets/icons/calender.svg" />
+          <p class="text-xs text-gray-700">Jan-24</p>
+        </div>
+        <div class="flex space-x-1 items-center">
+          <img src="../../../assets/icons/message.svg" />
+          <p class="text-xs text-gray-700">450</p>
+        </div>
+      </div>
+      <h4 class="font-semibold">
+        Cras nisl dolor, accumsan et metus sit amet, vulputate condimentum
+        dolor.
+      </h4>
+      <p>
+        Maecenas scelerisque, arcu quis tempus egestas, ligula diam molestie
+        lectus, tincidunt malesuada arcu metus posuere metus.
+      </p>
+    </div>
+  </div>
+</div>
