need to work on the popup later

--- a/src/app/header/bottom-nav/bottom-nav.component.html
+++ b/src/app/header/bottom-nav/bottom-nav.component.html
@@ -30,13 +30,49 @@
   </div>
 
   <div *ngIf="isAllCategoryOpen" class="absolute top-20 left-0 shadow-lg">
-    <div class="bg-white space-y-6 text-xs p-6 text-gray-600">
-      <p>Computer & Laptop</p>
-      <p>Accessories</p>
-      <p>Smartphone</p>
-      <p>Headphone</p>
-      <p>Mobile Accessories</p>
-      <p>Camera</p>
+    <div class="bg-white space-y-6 text-xs p-6 text-gray-600 w-[200px]">
+      <div class="flex justify-between items-center hover:text-black">
+        <p class="cursor-pointer">Computer & Laptop</p>
+        <img
+          src="../../../assets/icons/rightarrow.svg"
+          class="invert w-4 opacity-50"
+        />
+      </div>
+      <div class="flex justify-between items-center hover:text-black">
+        <p class="cursor-pointer">Accessories</p>
+        <img
+          src="../../../assets/icons/rightarrow.svg"
+          class="invert w-4 opacity-50"
+        />
+      </div>
+      <div class="flex justify-between items-center hover:text-black">
+        <p class="cursor-pointer">Smartphone</p>
+        <img
+          src="../../../assets/icons/rightarrow.svg"
+          class="invert w-4 opacity-50"
+        />
+      </div>
+      <div class="flex justify-between items-center hover:text-black">
+        <p class="cursor-pointer">Headphones</p>
+        <img
+          src="../../../assets/icons/rightarrow.svg"
+          class="invert w-4 opacity-50"
+        />
+      </div>
+      <div class="flex justify-between items-center hover:text-black">
+        <p class="cursor-pointer">Mobile Accessories</p>
+        <img
+          src="../../../assets/icons/rightarrow.svg"
+          class="invert w-4 opacity-50"
+        />
+      </div>
+      <div class="flex justify-between items-center hover:text-black">
+        <p class="cursor-pointer">Camera</p>
+        <img
+          src="../../../assets/icons/rightarrow.svg"
+          class="invert w-4 opacity-50"
+        />
+      </div>
     </div>
   </div>
 </div>
