--- a/src/app/upload-products/upload-products.component.html
+++ b/src/app/upload-products/upload-products.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form [formGroup]="productForm" (ngSubmit)="formSubmit()" class="space-y-4">
+  <form [formGroup]="productForm" class="space-y-4">
     <div>
       <label>Name</label>
       <input type="text" class="border outline-none" formControlName="name" />
