working on adding dynamci data

--- a/src/app/components/product-container/product-container.component.html
+++ b/src/app/components/product-container/product-container.component.html
@@ -1,7 +1,10 @@
 <div
   class="w-[176px] md:w-[200px] p-2 lg:m-1 space-y-3 lg:w-[210px] h-[320px] border flex flex-col items-start justify-center"
 >
-  <img src="{{ product.images[0] }}" />
+  <img
+    src="{{ product.images[0] }}"
+    class="w-[182px] h-[162px] object-contain"
+  />
   <div class="flex items-center space-x-1">
     <div class="flex">
       <img src="../../../assets/icons/star.svg" />
