--- a/src/app/home/computer-accessories/computer-accessories.component.html
+++ b/src/app/home/computer-accessories/computer-accessories.component.html
@@ -39,14 +39,9 @@
     </div>
 
     <div class="flex flex-wrap justify-center lg:justify-start">
-      <app-product-container></app-product-container>
-      <app-product-container></app-product-container>
-      <app-product-container></app-product-container>
-      <app-product-container></app-product-container>
-      <app-product-container></app-product-container>
-      <app-product-container></app-product-container>
-      <app-product-container></app-product-container>
-      <app-product-container></app-product-container>
+      <div *ngFor="let item of products | async | slice : 20 : 28">
+        <app-product-container [product]="item"></app-product-container>
+      </div>
     </div>
   </div>
   <div class="md:hidden lg:flex lg:flex-col space-y-2 lg:space-y-4">
