--- a/src/app/components/best-deal-product/best-deal-product.component.html
+++ b/src/app/components/best-deal-product/best-deal-product.component.html
@@ -4,10 +4,7 @@
   class="w-[170px] md:w-[200px] lg:w-[300px] h-[296px] border p-2 md:p-4 flex flex-col items-center space-y-2"
 >
   <div class="relative w-[full] flex justify-center items-center">
-    <img
-      src="../../../assets/images/drone.svg"
-      class="lg:w-[300px] h-[188px]"
-    />
+    <img src="{{ product.images }}" class="h-[188px] object-contain" />
     <div
       *ngIf="isHoveringProduct == true"
       class="hidden md:flex bg-gray-400 opacity-80 absolute top-0 left-0 w-full h-full"
@@ -44,8 +41,10 @@
   </div>
   <div class="space-y-3">
     <p class="text-sm line-clamp-2">
-      Bose Sport Earbuds-Wireless Earphones-Bluetooth In Ear
+      {{ product.name }}
     </p>
-    <p class="text-ciliconPriceBlue font-semibold text-sm">$2,300</p>
+    <p class="text-ciliconPriceBlue font-semibold text-sm">
+      ${{ product.price }}
+    </p>
   </div>
 </div>
