hover quick view only allowed for larage screens

--- a/src/app/components/best-deal-product/best-deal-product.component.html
+++ b/src/app/components/best-deal-product/best-deal-product.component.html
@@ -7,7 +7,7 @@
     <img src="{{ product.images }}" class="h-[188px] object-contain" />
     <div
       *ngIf="isHoveringProduct == true"
-      class="hidden md:flex bg-gray-400 opacity-80 absolute top-0 left-0 w-full h-full"
+      class="hidden lg:flex bg-gray-400 opacity-80 absolute top-0 left-0 w-full h-full"
     >
       <div
         class="absolute top-1/2 left-1/2 flex -translate-x-1/2 -translate-y-1/2 space-x-2"
