--- a/src/app/components/product-container/product-container.component.html
+++ b/src/app/components/product-container/product-container.component.html
@@ -10,7 +10,7 @@
     />
     <div
       *ngIf="isproductHover"
-      class="hidden md:flex w-full h-full absolute bg-gray-400 opacity-80 top-0"
+      class="hidden lg:flex w-full h-full absolute bg-gray-400 opacity-80 top-0"
     >
       <div
         class="absolute top-1/2 left-1/2 flex -translate-x-1/2 -translate-y-1/2 space-x-2"
