need more working

--- a/src/app/components/best-deal-product/best-deal-product.component.html
+++ b/src/app/components/best-deal-product/best-deal-product.component.html
@@ -32,6 +32,7 @@
           class="hover:bg-ciliconorange cursor-pointer group/hovericons bg-white rounded-full w-[40px] h-[40px] p-2 flex justify-center items-center"
         >
           <img
+            (click)="enableQuickView()"
             src="../../../assets/icons/eye.svg"
             class="group-hover/hovericons:invert"
           />
