--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="relative">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
+  <div
+    *ngIf="isquickviewEnabled | async"
+    class="fixed top-0 h-full w-full overflow-y-hidden"
+  >
+    <app-quick-view></app-quick-view>
+  </div>
+</div>
