--- a/src/app/components/product-container/product-container.component.html
+++ b/src/app/components/product-container/product-container.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-[176px] md:w-[200px] p-2 lg:m-1 space-y-3 lg:w-[210px] h-[320px] border flex flex-col items-start justify-center"
+  class="w-[176px] md:w-[200px] p-2 lg:m-1 space-y-3 lg:w-[210px] h-[320px] border flex flex-col items-start justify-center relative"
 >
   <div (mouseenter)="hovering()" (mouseleave)="notHovering()" class="relative">
     <img
@@ -35,6 +35,7 @@
           class="hover:bg-ciliconorange cursor-pointer group/hovericons bg-white rounded-full w-[40px] h-[40px] p-2 flex justify-center items-center"
         >
           <img
+            (click)="enableQuickView()"
             src="../../../assets/icons/eye.svg"
             class="group-hover/hovericons:invert"
           />
